3/25/2014
- version 2.2
- support configurable iat checking acceptance interval
- add configurable file cache clean interval
- add some docs on proprietary client metadata config extensions

3/24/2014
- add support for Apache 2.4 mutex permission call
- fix shm post_config init bug/typo
- correct shm debug function name printouts

3/21/2014
- implement logout function (and cache delete)
- check token_type == Bearer on implicit flows

3/19/2014
- make all caching (incl. shm) vhost specific

3/18/2014
- complete re-factoring caching layer
- documentation: caching primitives/update README

3/17/2014
- first batch of rewriting caching layer
- add memcache and shared memory support
- store jwks in cache

3/16/2014
- loosen response_types_supported (provider) and response_types (client) handling; .provider only warns, .client overrides now

3/14/2014
- fix warning/debug printout in handle_implicit_post (was logging as warning: handle_implicit_redirect)
- include nonce in "token" flow as well (mitreid.org)
- spelling fixes

3/13/2014
- version 2.1
- change README an provide example RedirectURI's that don't collide with protected content

3/12/2014
- added support for calling the userinfo endpoint in implicit flows ("token id_token")
- allow for returning account names, domain names or partial issuer identifiers in the discovered oidc_provider value
- normalize issuer filenames cq. no trailing slashes included anymore, no leading "https%3A%2F%2F"
- added configurable JWK key set retrieve interval
- improved error response handling

3/11/2014
- delete metadata files also when they do not parse as JSON
- strip charset utf-8 addition from application/json Content-Type
- allow to override default response_type in client metadata

3/10/2014
- version 2.0.1
- extend iat window to 10 minutes (due to interop test results Google/Mitre...)
- don't write more than strlen for metadata files

3/10/2014
- version 2.0
- Debian packaging